@@ -33,6 +33,17 @@ import org.apache.mahout.math.VectorWritable;
 
 public final class MinHashDriver extends AbstractJob {
 
+  public static final String NUM_HASH_FUNCTIONS = "numHashFunctions";
+  public static final String KEY_GROUPS = "keyGroups";
+  public static final String HASH_TYPE = "hashType";
+  public static final String MIN_CLUSTER_SIZE = "minClusterSize";
+  public static final String MIN_VECTOR_SIZE = "minVectorSize";
+  public static final String NUM_REDUCERS = "numReducers";
+  public static final String DEBUG_OUTPUT = "debugOutput";
+  public static final String VECTOR_DIMENSION_TO_HASH  = "vectorDimensionToHash";
+
+  static final String HASH_DIMENSION_VALUE = "value";
+
   public static void main(String[] args) throws Exception {
     ToolRunner.run(new MinHashDriver(), args);
   }
@@ -41,14 +52,18 @@ public final class MinHashDriver extends AbstractJob {
   public int run(String[] args) throws Exception {
     addInputOption();
     addOutputOption();
-    addOption(MinhashOptionCreator.minClusterSizeOption().create());
-    addOption(MinhashOptionCreator.minVectorSizeOption().create());
-    addOption(MinhashOptionCreator.vectorDimensionToHashOption().create());
-    addOption(MinhashOptionCreator.hashTypeOption().create());
-    addOption(MinhashOptionCreator.numHashFunctionsOption().create());
-    addOption(MinhashOptionCreator.keyGroupsOption().create());
-    addOption(MinhashOptionCreator.numReducersOption().create());
-    addOption(MinhashOptionCreator.debugOutputOption().create());
+
+
+    addOption(MIN_CLUSTER_SIZE, "mcs", "Minimum points inside a cluster", String.valueOf(10));
+    addOption(MIN_VECTOR_SIZE, "mvs", "Minimum size of vector to be hashed", String.valueOf(5));
+    addOption(VECTOR_DIMENSION_TO_HASH, "vdh", "Dimension of vector to hash. Available types: (value, index). " +
+        "Defaults to 'value'", HASH_DIMENSION_VALUE);
+    addOption(HASH_TYPE, "ht", "Type of hash function to use. Available types: (linear, polynomial, murmur) ",
+        HashFactory.HashType.MURMUR.toString());
+    addOption(NUM_HASH_FUNCTIONS, "nh", "Number of hash functions to be used", String.valueOf(10));
+    addOption(KEY_GROUPS, "kg", "Number of key groups to be used", String.valueOf(2));
+    addOption(NUM_REDUCERS, "nr", "The number of reduce tasks. Defaults to 2", String.valueOf(2));
+    addFlag(DEBUG_OUTPUT, "debug", "Output the whole vectors for debugging");
     addOption(DefaultOptionCreator.overwriteOption().create());
 
     if (parseArguments(args) == null) {
@@ -59,14 +74,21 @@ public final class MinHashDriver extends AbstractJob {
       HadoopUtil.delete(getConf(), getOutputPath());
     }
 
-    int minClusterSize = Integer.valueOf(getOption(MinhashOptionCreator.MIN_CLUSTER_SIZE));
-    int minVectorSize = Integer.valueOf(getOption(MinhashOptionCreator.MIN_VECTOR_SIZE));
-    String dimensionToHash = getOption(MinhashOptionCreator.VECTOR_DIMENSION_TO_HASH);
-    String hashType = getOption(MinhashOptionCreator.HASH_TYPE);
-    int numHashFunctions = Integer.valueOf(getOption(MinhashOptionCreator.NUM_HASH_FUNCTIONS));
-    int keyGroups = Integer.valueOf(getOption(MinhashOptionCreator.KEY_GROUPS));
-    int numReduceTasks = Integer.parseInt(getOption(MinhashOptionCreator.NUM_REDUCERS));
-    boolean debugOutput = hasOption(MinhashOptionCreator.DEBUG_OUTPUT);
+    int minClusterSize = Integer.valueOf(getOption(MIN_CLUSTER_SIZE));
+    int minVectorSize = Integer.valueOf(getOption(MIN_VECTOR_SIZE));
+    String dimensionToHash = getOption(VECTOR_DIMENSION_TO_HASH);
+    String hashType = getOption(HASH_TYPE);
+    int numHashFunctions = Integer.valueOf(getOption(NUM_HASH_FUNCTIONS));
+    int keyGroups = Integer.valueOf(getOption(KEY_GROUPS));
+    int numReduceTasks = Integer.parseInt(getOption(NUM_REDUCERS));
+    boolean debugOutput = hasOption(DEBUG_OUTPUT);
+
+    try {
+      HashFactory.HashType.valueOf(hashType);
+    } catch (IllegalArgumentException e) {
+      System.err.println("Unknown hashType: " + hashType);
+      return -1;
+    }
 
     Class<? extends Writable> outputClass = debugOutput ? VectorWritable.class : Text.class;
     Class<? extends OutputFormat> outputFormatClass =
@@ -76,13 +98,13 @@ public final class MinHashDriver extends AbstractJob {
             Text.class, outputClass, MinHashReducer.class, Text.class, VectorWritable.class, outputFormatClass);
 
     Configuration minHashConfiguration = minHash.getConfiguration();
-    minHashConfiguration.setInt(MinhashOptionCreator.MIN_CLUSTER_SIZE, minClusterSize);
-    minHashConfiguration.setInt(MinhashOptionCreator.MIN_VECTOR_SIZE, minVectorSize);
-    minHashConfiguration.set(MinhashOptionCreator.VECTOR_DIMENSION_TO_HASH, dimensionToHash);
-    minHashConfiguration.set(MinhashOptionCreator.HASH_TYPE, hashType);
-    minHashConfiguration.setInt(MinhashOptionCreator.NUM_HASH_FUNCTIONS, numHashFunctions);
-    minHashConfiguration.setInt(MinhashOptionCreator.KEY_GROUPS, keyGroups);
-    minHashConfiguration.setBoolean(MinhashOptionCreator.DEBUG_OUTPUT, debugOutput);
+    minHashConfiguration.setInt(MIN_CLUSTER_SIZE, minClusterSize);
+    minHashConfiguration.setInt(MIN_VECTOR_SIZE, minVectorSize);
+    minHashConfiguration.set(VECTOR_DIMENSION_TO_HASH, dimensionToHash);
+    minHashConfiguration.set(HASH_TYPE, hashType);
+    minHashConfiguration.setInt(NUM_HASH_FUNCTIONS, numHashFunctions);
+    minHashConfiguration.setInt(KEY_GROUPS, keyGroups);
+    minHashConfiguration.setBoolean(DEBUG_OUTPUT, debugOutput);
     minHash.setNumReduceTasks(numReduceTasks);
 
     boolean succeeded = minHash.waitForCompletion(true);
